# fmlr

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  ChangeLog  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac
R/: 00-globals.r  01-class_utils.r  02-features.r.in  03-checks.r  04-utils.r  card-interface.r  card.r  cpu-bindings.r  cpumat-bindings.r  cpumat-interface.r  cpumat.r  cpuvec-bindings.r  cpuvec-interface.r  cpuvec.r  dimops.r  fmlr-package.r  gpu-bindings.r  gpu-card-bindings.r  gpumat-interface.r  gpumat.r  gpuvec-interface.r  gpuvec.r  grid-interface.r  grid.r  helpers.r  linalg.r  mpi-bindings.r  mpimat-interface.r  mpimat.r  stats.r
R/conf/: get_conf.r
containers/docker/dev/: Dockerfile  run.sh
containers/docker/dev-gpu/: Dockerfile  run.sh
containers/singularity/dev/: Singularity  build.sh  run.sh
containers/singularity/dev-gpu/: Singularity
docs/: Makefile
docs/html/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
docs/html/articles/: 01-installation.html  02-overview.html  03-backends.html  04-data.html  index.html
docs/html/news/: index.html
docs/html/reference/: as_cpumat.html  as_cpuvec.html  as_gpumat.html  as_gpuvec.html  as_mpimat.html  card.html  cpu2cpu.html  cpu2gpu.html  cpu2mpi.html  cpumat-class.html  cpumat.html  cpuvec-class.html  cpuvec.html  dimops.html  features.html  fmlr-package.html  gpu-card-class.html  gpu2cpu.html  gpu2gpu.html  gpumat-class.html  gpumat.html  gpuvec-class.html  gpuvec.html  grid.html  index.html  linalg-add.html  linalg-chol.html  linalg-cond.html  linalg-cpsvd.html  linalg-crossprod.html  linalg-det.html  linalg-dot.html  linalg-eigen.html  linalg-invert.html  linalg-lq-Q.html  linalg-lq.html  linalg-lu.html  linalg-matmult.html  linalg-norm.html  linalg-qr-Q.html  (+17 more)
inst/: CITATION
inst/benchmarks/: cov.r  crossprod.r  invert.r  matprod.r  mem.r  pca.r  svd.r
man/: as_cpumat.Rd  as_cpuvec.Rd  as_gpumat.Rd  as_gpuvec.Rd  as_mpimat.Rd  card.Rd  cov.Rd  cpu2cpu.Rd  cpu2gpu.Rd  cpu2mpi.Rd  cpumat-class.Rd  cpumat.Rd  cpuvec-class.Rd  cpuvec.Rd  dimops.Rd  features.Rd  fmlr-package.Rd  gpu-card-class.Rd  gpu-grid-class.Rd  gpu2cpu.Rd  gpu2gpu.Rd  gpumat-class.Rd  gpumat.Rd  gpuvec-class.Rd  gpuvec.Rd  grid.Rd  linalg-add.Rd  linalg-chol.Rd  linalg-cond.Rd  linalg-cpsvd.Rd  linalg-crossprod.Rd  linalg-det.Rd  linalg-dot.Rd  linalg-eigen.Rd  linalg-invert.Rd  linalg-lq-Q.Rd  linalg-lq.Rd  linalg-lu.Rd  linalg-matmult.Rd  linalg-norm.Rd  (+18 more)
src/: Makevars.in  Makevars.win  apply.hpp  card.cu  copy-cpu.cpp  copy-gpu.cu  copy-mpi.cpp  cpu-bindings.cpp  cpumat-bindings.cpp  cpumat.cpp  cpuvec-bindings.cpp  cpuvec.cpp  dimops-cpu.cpp  dimops-gpu.cu  dimops-mpi.cpp  extptr.h  fmlr-native.c  gpu-bindings.cu  gpu-dummy-bindings.cpp  gpumat.cu  gpuvec.cu  grid.cpp  helpers-cpu.cpp  helpers-gpu.cu  helpers-mpi.cpp  linalg-cpu.cpp  linalg-gpu.cu  linalg-mpi.cpp  mpi-bindings.cpp  mpi-dummy-bindings.cpp  mpimat.cpp  rutils.h  stats-cpu.cpp  stats-gpu.cu  stats-mpi.cpp  types.h  unused.hpp
tests/: cpumat.r  cpuvec.r  dimops-cpu.r  dimops-gpu.r  dimops-mpi.r  gpumat.r  gpuvec.r  linalg-cpu.r  linalg-cpumat.r  linalg-gpu.r  linalg-gpumat.r  linalg-mpi.r  linalg-mpimat.r  mpimat.r  stats-cpu.r  stats-gpu.r  stats-mpi.r
tests/internals/: common.r  dimops.r  linalg.r  mat.r  stats.r  vec.r
tools/: ax_check_cuda.m4
vignettes/: 01-installation.Rmd  02-overview.Rmd  03-backends.Rmd  04-data.Rmd  rebuild.r
vignettes/src/: _01-installation.Rmd  _02-overview.Rmd  _03-backends.Rmd  _04-data.Rmd
